# connect4

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
src/: ComputerPlayer.cpp  GameBoard.cpp  HumanPlayer.cpp  Makefile  connect4_function.h  main.cpp  test.cpp
